<resources>
    <string name="app_name">Kuppiya_admin</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact number</string>
    <string name="location">Location</string>
    <string name="company_name">Company name</string>
    <string name="monthly_salary">Monthly salary</string>
    <string name="job_title">Job title</string>
    <string name="update_jobs">Update Jobs</string>
    <string name="manage_jobs">Manage Jobs</string>
    <string name="delete">Delete</string>
    <string name="heading">Heading …</string>
    <string name="description">Description …</string>
    <string name="add_news">Add News</string>
    <string name="manage_news">Manage News</string>
    <string name="add_jobs">Add Jobs</string>
    <string name="welcome_msg">Welcome back \n Admin!</string>
    <string name="add_jobs_subtext">Tap to post a new job</string>
    <string name="manage_jobs_subtext">Manage all posted jobs</string>
    <string name="add_news_subtext">Tap to add a news</string>
    <string name="manage_news_subtext">Manage all posted news</string>
    <string name="update_news">Update News</string>
</resources>