<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:fadingEdge="vertical"
    android:fadingEdgeLength="250dp"
    android:fillViewport="true"
    android:scrollbars="none"
    tools:context=".AddJobsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:fitsSystemWindows="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back_button"
                app:layout_constraintBottom_toTopOf="@+id/guideline9"
                app:layout_constraintStart_toStartOf="@+id/guideline10" />

            <TextView
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="-5dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/add_jobs"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline9"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/jobTitle_addJobs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/job_title"
                android:textColorHint="@color/sub_text_color"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/salary_addJobs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/monthly_salary"
                android:textColorHint="@color/sub_text_color"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/jobTitle_addJobs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/company_addJobs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/company_name"
                android:textColorHint="@color/sub_text_color"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/salary_addJobs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/location_addJobs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/location"
                android:textColorHint="@color/sub_text_color"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/company_addJobs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/mobile_addJobs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/contact_number"
                android:textColorHint="@color/sub_text_color"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/location_addJobs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_addJobs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:background="@android:color/transparent"
                android:hint="@string/email"
                android:textColorHint="@color/sub_text_color"
                app:layout_constraintEnd_toStartOf="@+id/guideline11"
                app:layout_constraintStart_toStartOf="@+id/guideline10"
                app:layout_constraintTop_toBottomOf="@+id/mobile_addJobs">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@android:color/transparent"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:maxLines="1"/>

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/add_btn_jobs"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/btn_bg"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/add"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/guideline14"
                app:layout_constraintEnd_toStartOf="@+id/guideline13"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="@+id/guideline12"
                app:layout_constraintTop_toBottomOf="@+id/email_addJobs" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.05" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.95" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.20" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.80" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>